# cloud-engineer-prep-course

./: README.md  mkdocs.yml  pyproject.toml
docs/: 02_introduction_to_cloud_computing_with_gcp.md  03_getting_started_with_gcp_console.md  04_getting_started_with_cloud_shell.md  05_enabling_apis_and_resource_hierarchy.md  06_identity_and_access_management.md  07_starting_a_virtual_machine.md  08_advanced_virtual_machine_configurations.md  09_compute_engine_instance_groups.md  10_introduction_to_kubernetes_engine.md  11_managing_clusters_in_kubernetes_clusters.md  15_planning_and_configuring_storage.md  17_overview_of_big_data_services.md  18_networking_in_the_cloud_vpcs_and_vpns.md  19_networking_in_the_cloud_ip_adressing_firewalls_subnets_load_balancing_and_dns.md  21_deployment_manager.md  22_monitoring.md  23_preparing_for_the_certification_exam.md  25_practice_exam.md  README.md
docs/learning-resources/: README.md
docs/learning-resources/udemy-course/: 02_introduction_to_cloud_computing_with_gcp.md  03_getting_started_with_gcp_console.md  04_getting_started_with_cloud_shell.md  05_enabling_apis_and_resource_hierarchy.md  06_identity_and_access_management.md  07_starting_a_virtual_machine.md  08_advanced_virtual_machine_configurations.md  09_compute_engine_instance_groups.md  10_introduction_to_kubernetes_engine.md  11_managing_clusters_in_kubernetes_clusters.md  15_planning_and_configuring_storage.md  16_review_of_gcp_storage_options.md  17_overview_of_big_data_services.md  18_networking_in_the_cloud_vpcs_and_vpns.md  20_review_of_gcp_networking_services.md  (+4 more)
