[tool.poetry]
name = "cloud-engineer-prep-course"
version = "0.1.0"
description = "This project documents my preparation for the Google Associate Cloud Engineer examination."
authors = ["Jan-Benedikt Jagusch <jan.jagusch@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
